--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,12 @@
     "upload"
   ],
   "license": "BSD-4-Clause",
-  "homepage": "https://github.com/Nemmo/yii2-attachments",
+  "homepage": "https://github.com/mazpaijo/yii2-attachments",
   "authors": [
     {
-      "name": "Alimzhan Abuov aka Nemmo",
-      "email": "alimzhan.abu@yandex.kz",
-      "homepage": "http://alimzhan.kz",
+      "name": "Rico ulul ilmy aka mazpaijo",
+      "email": "rico.ulul@gmail.com",
+      "homepage": "http://me@ricoulul.me",
       "role": "Developer"
     }
   ],
