--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
   },
   "autoload": {
     "psr-4": {
-      "mazpaijo\\attachments-aws\\": "src"
+      "mazpaijo\\attachmentsAws\\": "src"
     }
   },
   "extra": {
